# Marutools

./: .gitattributes  .gitignore  .gitmodules  .travis-ci  .travis.yml  LICENCE  Makefile  README.md  build.sh  build_macos.sh  installer.py  main.conf  maruediter.py  maruediter_debug.py  maruediternew.py  marueditor.py  marueditor_debug.py  marueditornew.py  marutools.py  mfsl_g3_jp.txt  my_tkaddon_test.py  pyproject.toml  requirements-gui.txt  requirements.txt  requirements_module.txt  send.py  tkmedia_test.py
addons/: .py  __hagaki.py  list.list  mpj.py  py.py  pyw.py  video.py
build_src/: build.sh  installer.py  make_installer.sh  requirements.py  setup.py
docs/: CNAME  api.html  dev.html  genindex.html  index.html  make.bat  objects.inv  readme.txt  search.html  searchindex.js  user.html
docs_src/: Makefile  make.bat  requirements.txt
editor/: __init__.py
file_addon/: __init__.py  flist.list  picle.py  video.py
gui_addon/: __init__.py  flist.list
image/: marueditor.icns
language/: .lang  af.lang  am.lang  ar.lang  ar_001.lang  az.lang  be.lang  bg.lang  bn.lang  bs.lang  ca.lang  chinese fix.task  cs.lang  cy.lang  da.lang  de.lang  el.lang  en.lang  en_US.lang  eo.lang  es.lang  et.lang  eu.lang  fa.lang  fi.lang  fil.lang  fr.lang  fy.lang  ga.lang  gd.lang  gen_lang.py  gu.lang  ha.lang  haw.lang  he.lang  hi.lang  hr.lang  hu.lang  id.lang  ig.lang  (+67 more)
libtools/: __init__.py  addon.py  config.py  core.py  data.py  lang.py  ui.py  widgets.py
linux/: deblist
share/: custom_note.py  filedialog.py  libwacom.py  notebook.py  scrolledtext.py  tkdnd.py  (+1 more)
(+136 files in other folders)
